--- a/webinterface.html
+++ b/webinterface.html
@@ -14,6 +14,7 @@
         createApp({
             timeOnServer: "",
             lastSend: "",
+            lastSendAgo: 0.0,
             reportingInterval: 0.0,
             statusGood: true,
             reason: "",
@@ -27,6 +28,7 @@
                     x.json().then((y) => {
                         that.timeOnServer = y.time;
                         that.lastSend = y.last_send;
+                        that.lastSendAgo = Math.floor((Date.parse(y.time) - Date.parse(y.last_send)) / 1000);
                         that.reportingInterval = y.reporting_interval;
                         that.graphanaEndpoint = y.graphana_endpoint;
                         if (y.status === "Good") {
@@ -66,7 +68,7 @@
         <a :href="graphanaEndpoint" target="_blank"><h1>Graphana</h1></a>
         <h1>Status:</h1>
 	<h3>Time on Raspberry: <span style="color: var(--bs-primary)">{{ timeOnServer }}</span></h3>
-        <h3>Last Sent Data: <span style="color: var(--bs-primary)">{{ data }} / {{ lastSend }} / {{ reportingInterval }}</span></h3>
+        <h4>Last Sent Data: <span style="color: var(--bs-primary)">{{ data }} / {{ lastSend }} / {{ lastSendAgo }} seconds ago / every {{ reportingInterval }} seconds</span></h3>
         <button class="btn btn-primary" @click="sendData">Force Send Data</button>
         <div v-if="statusGood">
             <i class="bi bi-emoji-smile" style="color: var(--bs-success); font-size: 25rem"></i>
