--- a/webinterface.html
+++ b/webinterface.html
@@ -1,92 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raspberry Status Page</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <style>
+      .status-icon {
+        font-size: 6rem;
+      }
+
+      @media screen and (min-width: 200px) {
+        .status-icon {
+          font-size: 12rem;
+        }
+      }
+
+      @media screen and (min-width: 400px) {
+        .status-icon {
+          font-size: 18rem;
+        }
+      }
+
+      @media screen and (min-width: 600px) {
+        .status-icon {
+          font-size: 24rem;
+        }
+      }
+    </style>
+  </head>
+
+  <body>
     <script type="module">
-        import { createApp } from 'https://unpkg.com/petite-vue?module';
-        createApp({
-            timeOnServer: "",
-            lastSend: "",
-            lastSendAgo: 0.0,
-            reportingInterval: 0.0,
-            statusGood: true,
-            reason: "",
-            data: "",
-            graphanaEndpoint: "",
-            interval: 0.0,
-            intervalReturn: null,
-            mounted() {
-                this.update();
-                setInterval(this.update, 500);
-            },
-            update() {
-                let that = this;
-                fetch("/status").then((x) => {
-                    x.json().then((y) => {
-                        that.timeOnServer = y.time;
-                        that.lastSend = y.last_send;
-                        that.lastSendAgo = Math.floor((Date.parse(y.time) - Date.parse(y.last_send)) / 1000);
-                        that.reportingInterval = y.reporting_interval;
-                        that.graphanaEndpoint = y.graphana_endpoint;
-                        if (y.status === "Good") {
-                            that.statusGood = true;
-                            that.data = JSON.stringify(y.last_sent_data)
-                        } else {
-                            that.statusGood = false;
-                            that.reason = JSON.stringify(y.status.Bad);
-                        }
-                    })
-                })
-            },
-            sendInterval() {
-                let that = this;
-                fetch(`/update_reporting_interval?interval=${that.interval}`, {
-                    method: "POST",
-                }).then((x) => {
-                    x.json().then((y) => {
-                        that.intervalReturn = null;
-                        if (y.error) {
-                            that.intervalReturn = y.error;
-                        } else {
-                            that.update();
-                        }
-                    })
-                })
-            },
-            sendData() {
-                let that = this;
-                fetch(`/force_send_data`, {method: "POST"}).then((_) => {
-                    that.update();
-                })
-            }
-        }).mount("#app")
+      import { createApp } from "https://unpkg.com/petite-vue?module";
+      createApp({
+        timeOnServer: "",
+        lastSend: "",
+        lastSendAgo: 0.0,
+        reportingInterval: 0.0,
+        statusGood: true,
+        reason: "",
+        data: "",
+        graphanaEndpoint: "",
+        interval: 0.0,
+        intervalReturn: null,
+        mounted() {
+          this.update();
+          // Make this auto-update every second
+          setInterval(this.update, 1000);
+        },
+        update() {
+          let that = this;
+          fetch("/status").then((x) => {
+            x.json().then((y) => {
+              that.timeOnServer = y.time;
+              that.lastSend = y.last_send;
+              that.lastSendAgo = Math.floor(
+                (Date.parse(y.time) - Date.parse(y.last_send)) / 1000
+              );
+              that.reportingInterval = y.reporting_interval;
+              that.graphanaEndpoint = y.graphana_endpoint;
+              if (y.status === "Good") {
+                that.statusGood = true;
+                that.data = JSON.stringify(y.last_sent_data);
+              } else {
+                that.statusGood = false;
+                that.reason = JSON.stringify(y.status.Bad);
+              }
+            });
+          });
+        },
+        sendInterval() {
+          let that = this;
+          fetch(`/update_reporting_interval?interval=${that.interval}`, {
+            method: "POST",
+          }).then((x) => {
+            x.json().then((y) => {
+              that.intervalReturn = null;
+              if (y.error) {
+                that.intervalReturn = y.error;
+              } else {
+                that.update();
+              }
+            });
+          });
+        },
+        sendData() {
+          let that = this;
+          fetch(`/force_send_data`, { method: "POST" }).then((_) => {
+            that.update();
+          });
+        },
+      }).mount("#app");
     </script>
     <div class="container text-center" id="app" @vue:mounted="mounted">
-        <a :href="graphanaEndpoint" target="_blank"><h1>Graphana</h1></a>
-        <h1>Status:</h1>
-	<h3>Time on Raspberry: <span style="color: var(--bs-primary)">{{ timeOnServer }}</span></h3>
-        <h4>Last Sent Data: <span style="color: var(--bs-primary)">{{ data }} / {{ lastSend }} / {{ lastSendAgo }} seconds ago / every {{ reportingInterval }} seconds</span></h3>
-        <button class="btn btn-primary" @click="sendData">Force Send Data</button>
-        <div v-if="statusGood">
-            <i class="bi bi-emoji-smile" style="color: var(--bs-success); font-size: 25rem"></i>
-        </div>
-        <div v-if="!statusGood">
-            <i class="bi bi-emoji-frown" style="color: var(--bs-danger); font-size: 25rem"></i>
-        </div>
-        <h3 v-if="!statusGood" style="color: var(--bs-danger)">Reason: {{ reason }}</h3>
-        <div class="row">
-            <label class="fw-bolder fs-3" for="interval">Data Collection Interval in Seconds</label>
-            <input type="number" name="interval" v-model="interval" value="120" />
-            <button class="btn btn-primary" @click="sendInterval">Set</button>
-            <p class="fw-bold fs-2" style="color: var(--bs-danger)" v-if="intervalReturn">{{ intervalReturn }}</p>
-       </div>
+      <a :href="graphanaEndpoint" target="_blank">
+        <h3>Graphana</h3>
+      </a>
+      <h1>Status:</h1>
+      <h3>
+        Time on Raspberry:
+        <span style="color: var(--bs-primary)">{{ timeOnServer }}</span>
+      </h3>
+      <h4>
+        Last Sent Data:
+        <span style="color: var(--bs-primary)"
+          >{{ data }} / {{ lastSend }} / {{ lastSendAgo }} seconds ago / every
+          {{ reportingInterval }} seconds</span
+        >
+      </h4>
+      <button class="btn btn-primary" @click="sendData">Force Send Data</button>
+      <div v-if="statusGood">
+        <i
+          class="bi bi-emoji-smile status-icon"
+          style="color: var(--bs-success)"
+        ></i>
+      </div>
+      <div v-if="!statusGood">
+        <i
+          class="bi bi-emoji-frown status-icon"
+          style="color: var(--bs-danger)"
+        ></i>
+      </div>
+      <h3 v-if="!statusGood" style="color: var(--bs-danger)">
+        Reason: {{ reason }}
+      </h3>
+      <label class="fw-bolder fs-3" for="interval"
+        >Data Collection Interval in Seconds</label
+      >
+      <div style="display: flex; flex-direction: column">
+        <input
+          class="mx-2 my-1"
+          type="number"
+          name="interval"
+          v-model="interval"
+          value="120"
+        />
+        <button class="btn btn-primary m-2 px-3" @click="sendInterval">
+          Set
+        </button>
+        <p
+          class="fw-bold fs-2"
+          style="color: var(--bs-danger)"
+          v-if="intervalReturn"
+        >
+          {{ intervalReturn }}
+        </p>
+      </div>
     </div>
-</body>
+  </body>
 </html>
